# net-rs

./: Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
docs/: prd.md
src/: app.rs  crossterm.rs  main.rs
src/cli/: args.rs
src/config/: language.rs  mod.rs  tls.rs
src/protocols/: common.rs  http.rs  http2.rs  http3.rs  mod.rs  tcp.rs  udp.rs  websocket.rs
src/ui/: layout.rs  mod.rs  ui.rs
src/ui/widgets/: input_dialog.rs  message_view.rs  mod.rs  status_bar.rs  tabs.rs
src/utils/: data_format.rs
