[package]
name = "nt"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0" }
crossterm = { version = "0.28.1" }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
bytes = { version = "1.9.0" }
anyhow = { version = "1.0.95" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true